# kiss-talon

./: .gitignore  README.md  config.example.toml  pyproject.toml
kiss_talon/: cli.py  notify.py  runner.py  talon.py
skill/: kiss_talon.md
