[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["kiss_talon*"]

[project]
name = "kiss_talon"
version = "0.1.0"
description = "Lightweight agent orchestrator using cron + Claude CLI"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
kiss_talon = "kiss_talon.cli:main"
